--- a/stylesheet.css
+++ b/stylesheet.css
@@ -18,6 +18,6 @@ h2{
     font-family: "Comic Sans MS";
 }
 body {
-    background-color: darkblue;
+    background-color: black;
     colour: white;
 }
