--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
   html {
    background-color: black;
-   background-image: url('http://www.neyralaw.com/wp-content/uploads/2012/07/tokyo-blue-background-4547.jpg');
+   background-image: url('http://wallpapers55.com/wp-content/uploads/2013/08/3d-black-cubes-backgrounds-wallpapers1.jpg');
    background-size: cover;
    background-attachment: fixed;
 }
