--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,24 +1,24 @@
   html {
    background-color: black;
-   background-image: url('http://wallpapers55.com/wp-content/uploads/2013/08/3d-black-cubes-backgrounds-wallpapers1.jpg');
+   background-image: url('http://www.mytinyphone.com/uploads/users/mops801/304344.jpg');
    background-size: cover;
    background-attachment: fixed;
 }
 header {
-   background-color: #222222;
+   background-color: ;
    color: #FFFFFF;
    padding: 20px;
    font-family: 'Lobster', cursive;
    text-align: center
 }
 .introduction {
-   background-color: #222222;
-   padding: 30px;
+   background-color: ;
+   padding: 10px;
    width: 700px;
    margin: 0 auto;
    margin-top: 30px;
 
-   color: #FFFFFF;
+   color: #black;
    font-size: 14px;
    line-height: 130%;
    border: 10px solid #1770FF;
@@ -32,4 +32,19 @@ header {
    box-shadow: 3px 3px 5px 6px #000000;
    margin: 5px;
    font-size: 20;
+}
+.main-navigation {
+    background: ;
+}
+.main-navigation a {
+    background-color: ;
+    border-color: ;
+    font-weight: bold;
+    display: inline-block;
+    padding: 5px 10px;
+}
+
+.main-navigation a:hover {
+    background-color: ;
+    color: #FFFFFF;
 }
